Fix EFF/Privacy Badger spacing on Firefox.

--- a/src/skin/popup.css
+++ b/src/skin/popup.css
@@ -150,6 +150,7 @@ font-size: 16px;
     display: table;
     float: left;
     margin: 2px 10px 0 10px;
+    line-height: 1.0;
 }
 
 #privacyBadgerHeader h2{
